--- a/cadvsearch.ui
+++ b/cadvsearch.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>441</width>
-    <height>366</height>
+    <height>389</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -72,7 +72,7 @@
           <item>
            <widget class="QRadioButton" name="radioButton_11">
             <property name="text">
-             <string>Virtual Observatory tables</string>
+             <string>Virtual Observatory</string>
             </property>
            </widget>
           </item>
