--- a/cwpossel.ui
+++ b/cwpossel.ui
@@ -613,7 +613,7 @@
             <item>
              <widget class="QPushButton" name="pushButton_16">
               <property name="text">
-               <string>Read</string>
+               <string>Select</string>
               </property>
              </widget>
             </item>
@@ -688,7 +688,7 @@
              <item>
               <widget class="QPushButton" name="pushButton_13">
                <property name="text">
-                <string>Read</string>
+                <string>Select</string>
                </property>
               </widget>
              </item>
