--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -66,7 +66,7 @@
        <x>30</x>
        <y>10</y>
        <width>311</width>
-       <height>241</height>
+       <height>51</height>
       </rect>
      </property>
      <property name="sizePolicy">
@@ -99,8 +99,8 @@
     <widget class="QDockWidget" name="dockTele">
      <property name="geometry">
       <rect>
-       <x>80</x>
-       <y>281</y>
+       <x>390</x>
+       <y>350</y>
        <width>261</width>
        <height>118</height>
       </rect>
@@ -2931,7 +2931,7 @@ background-color: rgb(0, 0, 0);</string>
           <x>0</x>
           <y>0</y>
           <width>268</width>
-          <height>402</height>
+          <height>430</height>
          </rect>
         </property>
         <attribute name="label">
@@ -2939,7 +2939,10 @@ background-color: rgb(0, 0, 0);</string>
         </attribute>
         <layout class="QVBoxLayout" name="verticalLayout_10">
          <item>
-          <layout class="QVBoxLayout" name="verticalLayout_9">
+          <layout class="QVBoxLayout" name="verticalLayout_17">
+           <property name="spacing">
+            <number>6</number>
+           </property>
            <item>
             <widget class="QLabel" name="label_19">
              <property name="text">
@@ -3021,7 +3024,24 @@ background-color: rgb(0, 0, 0);</string>
             </layout>
            </item>
            <item>
+            <widget class="Line" name="line_20">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+            </widget>
+           </item>
+           <item>
             <layout class="QHBoxLayout" name="horizontalLayout_6">
+             <item>
+              <widget class="QLabel" name="label_18">
+               <property name="text">
+                <string>Time</string>
+               </property>
+               <property name="alignment">
+                <set>Qt::AlignCenter</set>
+               </property>
+              </widget>
+             </item>
              <item>
               <widget class="QLabel" name="label_17">
                <property name="text">
@@ -3030,12 +3050,27 @@ background-color: rgb(0, 0, 0);</string>
               </widget>
              </item>
              <item>
-              <widget class="QLabel" name="label_18">
-               <property name="text">
-                <string>Time</string>
+              <widget class="QSlider" name="horizontalSlider">
+               <property name="minimum">
+                <number>-100</number>
                </property>
-               <property name="alignment">
-                <set>Qt::AlignCenter</set>
+               <property name="maximum">
+                <number>100</number>
+               </property>
+               <property name="singleStep">
+                <number>0</number>
+               </property>
+               <property name="pageStep">
+                <number>0</number>
+               </property>
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+               <property name="tickPosition">
+                <enum>QSlider::TicksAbove</enum>
+               </property>
+               <property name="tickInterval">
+                <number>10</number>
                </property>
               </widget>
              </item>
@@ -3052,27 +3087,9 @@ background-color: rgb(0, 0, 0);</string>
             </layout>
            </item>
            <item>
-            <widget class="QSlider" name="horizontalSlider">
-             <property name="minimum">
-              <number>-100</number>
-             </property>
-             <property name="maximum">
-              <number>100</number>
-             </property>
-             <property name="singleStep">
-              <number>0</number>
-             </property>
-             <property name="pageStep">
-              <number>0</number>
-             </property>
+            <widget class="Line" name="line_21">
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
-             </property>
-             <property name="tickPosition">
-              <enum>QSlider::TicksAbove</enum>
-             </property>
-             <property name="tickInterval">
-              <number>10</number>
              </property>
             </widget>
            </item>
@@ -3080,29 +3097,36 @@ background-color: rgb(0, 0, 0);</string>
             <widget class="QComboBox" name="comboBox_4"/>
            </item>
            <item>
-            <widget class="SkWatch" name="widget_2" native="true">
-             <property name="minimumSize">
-              <size>
-               <width>0</width>
-               <height>0</height>
-              </size>
+            <widget class="Line" name="line_22">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
              </property>
             </widget>
            </item>
            <item>
-            <spacer name="verticalSpacer_9">
-             <property name="orientation">
-              <enum>Qt::Vertical</enum>
-             </property>
-             <property name="sizeHint" stdset="0">
+            <widget class="SkWatch" name="widget_2" native="true">
+             <property name="minimumSize">
               <size>
-               <width>20</width>
-               <height>40</height>
+               <width>0</width>
+               <height>20</height>
               </size>
              </property>
-            </spacer>
+            </widget>
            </item>
           </layout>
+         </item>
+         <item>
+          <spacer name="verticalSpacer_15">
+           <property name="orientation">
+            <enum>Qt::Vertical</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>20</width>
+             <height>40</height>
+            </size>
+           </property>
+          </spacer>
          </item>
         </layout>
        </widget>
