--- a/ctychosearch.ui
+++ b/ctychosearch.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Search in Tycho catalogue</string>
+   <string>Search in catalogue</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2" stretch="999,1">
    <item>
