--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -643,18 +643,12 @@
     <addaction name="menuPlanet_satellite"/>
     <addaction name="actionMoonless_nights"/>
     <addaction name="actionSunspots"/>
+    <addaction name="actionTwilight_2"/>
    </widget>
    <widget class="QMenu" name="menu_Telescope">
     <property name="title">
      <string>&amp;Telescope</string>
     </property>
-    <widget class="QMenu" name="menuSelect_telescope_shape">
-     <property name="title">
-      <string>Select telescope shape</string>
-     </property>
-     <addaction name="actionStandard_cross"/>
-     <addaction name="actionSelect"/>
-    </widget>
     <widget class="QMenu" name="menuRefresh_rate">
      <property name="title">
       <string>Refresh rate</string>
@@ -670,7 +664,6 @@
     <addaction name="separator"/>
     <addaction name="actionFind_telescope"/>
     <addaction name="separator"/>
-    <addaction name="menuSelect_telescope_shape"/>
     <addaction name="menuRefresh_rate"/>
    </widget>
    <widget class="QMenu" name="menuCatalogue">
@@ -883,7 +876,7 @@
         <number>1</number>
        </property>
        <property name="currentIndex">
-        <number>5</number>
+        <number>4</number>
        </property>
        <property name="tabSpacing">
         <number>6</number>
@@ -2524,7 +2517,7 @@
           <x>0</x>
           <y>0</y>
           <width>262</width>
-          <height>430</height>
+          <height>519</height>
          </rect>
         </property>
         <attribute name="label">
@@ -2725,19 +2718,6 @@ background-color: rgb(0, 0, 0);</string>
              </property>
             </widget>
            </item>
-           <item row="1" column="4">
-            <spacer name="horizontalSpacer_10">
-             <property name="orientation">
-              <enum>Qt::Horizontal</enum>
-             </property>
-             <property name="sizeHint" stdset="0">
-              <size>
-               <width>40</width>
-               <height>20</height>
-              </size>
-             </property>
-            </spacer>
-           </item>
            <item row="1" column="1">
             <widget class="QPushButton" name="pb_tc_up">
              <property name="enabled">
@@ -2841,6 +2821,19 @@ background-color: rgb(0, 0, 0);</string>
              </property>
             </widget>
            </item>
+           <item row="1" column="4">
+            <spacer name="horizontalSpacer_10">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>40</width>
+               <height>20</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
           </layout>
          </item>
          <item>
@@ -2908,6 +2901,22 @@ background-color: rgb(0, 0, 0);</string>
              </widget>
             </item>
            </layout>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLabel" name="label_26">
+           <property name="frameShape">
+            <enum>QFrame::StyledPanel</enum>
+           </property>
+           <property name="text">
+            <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;If you want to change the shape of the telescope, then insert eg. a frame of view and from the context menu link it to the telescope.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+           </property>
+           <property name="scaledContents">
+            <bool>true</bool>
+           </property>
+           <property name="wordWrap">
+            <bool>true</bool>
+           </property>
           </widget>
          </item>
          <item>
@@ -4485,7 +4494,7 @@ p, li { white-space: pre-wrap; }
     <bool>true</bool>
    </property>
    <property name="text">
-    <string>Select...</string>
+    <string>Telescope FOV...</string>
    </property>
   </action>
   <action name="actionSelect_world_location">
@@ -5883,6 +5892,16 @@ p, li { white-space: pre-wrap; }
    </property>
   </action>
   <action name="actionTwilight">
+   <property name="text">
+    <string>Twilight...</string>
+   </property>
+  </action>
+  <action name="actionTelescope_frame">
+   <property name="text">
+    <string>Telescope frame...</string>
+   </property>
+  </action>
+  <action name="actionTwilight_2">
    <property name="text">
     <string>Twilight...</string>
    </property>
